# ra6m3-rtic

./: .gdb_history  .gitignore  Cargo.toml  README.md  Taskfile.yml  bacon.toml  build.rs  env.gcc.toml  env.llvm.toml  env.toml.example  memory.x  ozone.jdebug  ra6m3_memory.x  rtt.JLinkScript  rumqttd.toml  rustc-ice-2025-03-25T20_22_25-465587.txt  rustc-ice-2025-03-26T09_44_43-15605.txt  rustc-ice-2025-03-26T09_44_50-15662.txt  rustc-ice-2025-03-26T09_44_50-15670.txt  rustc-ice-2025-03-26T09_44_54-15714.txt  rustc-ice-2025-03-26T09_44_55-15723.txt  rustc-ice-2025-03-26T10_16_16-32326.txt  rustc-ice-2025-03-26T10_16_17-32334.txt
.cargo/: config.toml
fsp_cfg/: r_dmac_cfg.h  r_elc_cfg.h  r_ether_cfg.h  r_ether_phy_cfg.h  r_flash_hp_cfg.h  r_gpt_cfg.h  r_icu_cfg.h
fsp_cfg/bsp/: board_cfg.h  bsp_cfg.h  bsp_clock_cfg.h  bsp_mcu_family_cfg.h
lm3s6965evb_ethernet_sys/: Cargo.toml  LICENSE.TI  README.md  build.rs  ethernet.c  ethernet.h
lm3s6965evb_ethernet_sys/inc/: board.h
lm3s6965evb_ethernet_sys/src/: lib.rs
script/: fsp_base.ld
script/lld-shim/: ld
src/: conf.rs  defmt_semihosting.rs  embassy_time_driver.rs  http.rs  io_ports.rs  log_ra6m3.rs  log_ra6m3_setup.rs  log_semihosting.rs  logs.rs  main.rs  mono.rs  mpmc.rs  mqtt.rs  net.rs  net_channel.rs  net_device.rs  net_ra6m3.rs  net_semihosting.rs  network.rs  oneshot.rs  poll_share.rs  real_time_test.rs  socket.rs  socket_storage.rs  util.rs
src/http/: socket.rs  timer.rs
src/mqtt/: adapter.rs  channel.rs  tls_socket.rs
tls/: server.cert.pem  server.key.pem
tools/: jlinkgdbserver.sh  report.sh
