[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
lm3s6965 = { version = "0.2", optional = true }
lm3s6965evb_ethernet_sys = { path = "./lm3s6965evb_ethernet_sys", optional = true }
ra6m3 = { path = "/home/ddystopia/job/ra/pac/ra6m3", features = ["rt"], optional = true }
# -F linker-plugin-lto and compatible llvm version
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-semihosting = "0.5.0"
# rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
rtic = { path = "/home/ddystopia/code/clones/rtic/rtic/", features = ["thumbv7-backend"] }
rtic-sync = "1.3.0"
defmt = { version = "0.3.8", features = ["encoding-rzcobs"] }
# defmt = { version = "0.3.8", features = ["encoding-raw"] }
rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
konst = "0.3.16"
bare-metal = "1.0.0"
# minimq = "0.9.0"
# minimq = { path = "/home/ddystopia/job/minimq" }
minimq = { git = "https://github.com/quartiq/minimq", branch = "master" }
embedded-nal = "0.9.0"
embedded-time = "0.12.1"
futures-lite = { version = "2.6.0", default-features = false, features = [] }
extend_mut = { version = "0.4.0", default-features = false, features = [] }
heapless = { version = "0.8.0", default-features = false, features = ["defmt-03"] }
stackfuture = { version = "0.3.0", default-features = false }
atomic_refcell = "0.1.13"
static_cell = "2.1.0"
picoserve = { version = "0.15.0", features = ["defmt"] }

[profile.dev]
opt-level = 1

[features]
default = ["qemu"]
# default = ["ra6m3"]
ra6m3 = ["dep:ra6m3"]
qemu = ["dep:lm3s6965", "dep:lm3s6965evb_ethernet_sys"]

[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
    "async",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-udp",
    "socket-tcp",
    "defmt",
    # "verbose",
    #
    "iface-max-addr-count-3",
    "iface-max-multicast-group-count-4",
    "iface-max-sixlowpan-address-context-count-4",
    "iface-neighbor-cache-count-8",
    "iface-max-route-count-2",
    "ipv6-hbh-max-options-4",
    "dns-max-result-count-2",
    "dns-max-server-count-2",
    "dns-max-name-size-255",
    "rpl-relations-buffer-count-16",
    "rpl-parents-buffer-count-8",
]

# cfg-if = "1.0"
# bare-metal = "1.0.0"
# heapless = "0.8"
# rtic-time = "2.0.0"
# rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }

# [dependencies.futures]
# version = "0.3.26"
# default-features = false
# features = ["async-await"]
