[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
lm3s6965 = { version = "0.2", optional = true }
lm3s6965evb_ethernet_sys = { path = "./lm3s6965evb_ethernet_sys", optional = true }
ra-fsp-rs = { version = "0.1.4", features = ["ra6m3", "mod-r_ioport", "mod-r_ether", "mod-r_ether_phy"], optional = true }
# -F linker-plugin-lto and compatible llvm version
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-semihosting = "0.5.0"
rtic = { git = "https://github.com/rtic-rs/rtic", features = ["cortex-m", "thumbv7-backend"] }
rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
defmt = { version = "0.3.8", features = ["encoding-rzcobs"], optional = true }
log = { version = "0.4.27", features = ["release_max_level_info"], default-features = false, optional = true }
konst = "0.3.16"
bare-metal = "1.0.0"
minimq = "0.10.0"
embedded-nal = "0.9.0"
embedded-time = "0.12.1"
futures-lite = { version = "2.6.0", default-features = false, features = [] }
heapless = { version = "0.8.0", default-features = false, features = [] }
static_cell = "2.1.0"
picoserve = { version = "0.15.0", features = [] }
replace_with = { version = "0.1.7", default-features = false, features = ["nightly", "panic_abort"] }
embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls", default-features = false, features = [], optional = true }
embedded-io-async = "0.6.1"
futures-util = { version = "0.3.31", default-features = false }
diatomic-waker = { version = "0.2.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
extend_mut = { version = "0.4.2", default-features = false }
strum = { version = "0.27.1", features = ["derive"], default-features = false }
# rtt-target = { version = "0.6.1", features = ["log"], optional = true }
rtt-target = { git = "https://github.com/probe-rs/rtt-target.git", features = ["log"], optional = true }
sha2 = { version = "0.10.8", default-features = false }
rand_core = "0.6.4"

[patch."https://github.com/rtic-rs/rtic"]
rtic-macros = { path = "/home/ddystopia/code/clones/rtic/rtic-macros" }

[patch.crates-io]
ra-fsp-rs = { path = "/home/ddystopia/job/ra/ra-fsp-rs/" }
ra-fsp-sys = { path = "/home/ddystopia/job/ra/ra-fsp-sys/"  }
ra6m3-pac = { path = "/home/ddystopia/job/ra/pac/ra6m3/", package = "ra6m3-fsp-pac" }

[profile.release]
opt-level = 's' # 's' is a lot faster than 'z', but size is relatively the same
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[features]
# default = ["qemu", "defmt"]
default = ["ra6m3", "log", "tls"]
tls = ["dep:embedded-tls"]
ra6m3 = ["dep:ra-fsp-rs"]
qemu = ["dep:lm3s6965", "dep:lm3s6965evb_ethernet_sys"]
defmt = ["dep:defmt", "heapless/defmt-03", "picoserve/defmt", "embedded-tls/defmt", "smoltcp/defmt"]
log = ["dep:log", "dep:rtt-target", "smoltcp/log"]

[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
    "async",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-udp",
    "socket-tcp",
    # "verbose",
    #
    "iface-max-addr-count-3",
    "iface-max-multicast-group-count-4",
    "iface-max-sixlowpan-address-context-count-4",
    "iface-neighbor-cache-count-8",
    "iface-max-route-count-2",
    "ipv6-hbh-max-options-4",
    "dns-max-result-count-2",
    "dns-max-server-count-2",
    "dns-max-name-size-255",
    "rpl-relations-buffer-count-16",
    "rpl-parents-buffer-count-8",
]

# cfg-if = "1.0"
# bare-metal = "1.0.0"
# heapless = "0.8"
# rtic-time = "2.0.0"
# rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }

# [dependencies.futures]
# version = "0.3.26"
# default-features = false
# features = ["async-await"]
